third_party/move/move-compiler-v2/tests/checking-lang-v2.2/struct_literal_not_supported.exp

Diagnostics:
error: literal patterns inside struct/enum variants require language version 2.4-unstable or later
   ┌─ tests/checking-lang-v2.2/struct_literal_not_supported.move:11:19
   │
11 │             E::V1(1) => 1,
   │                   ^

error: literal patterns inside struct/enum variants require language version 2.4-unstable or later
   ┌─ tests/checking-lang-v2.2/struct_literal_not_supported.move:19:20
   │
19 │             S { x: 42 } => 1,
   │                    ^^
